# puyo-chain-detector

./: .gitignore  Background Threshold.ipynb  CMakeLists.txt  Chain Simulator.ipynb  Field Detection Research 2.ipynb  Field Grid.ipynb  LICENSE  Next Window Contours.ipynb  Next Window ROIs.ipynb  README.md  Screen ROIs.ipynb  chainsim.py  logistic-regression2.joblib  main.py  next_window.json  permutechain.py  player_field.json  puyo-classifier-aug10b.pt  puyo-classifier.pt  requirements.txt  roidetection.py  scorex.py  scraper.py  test.py  video.py  windowmotion.py
capture-setup/: settings.py
cpp/: BoolField.cpp  BoolField.h  Detector.cpp  FPS.cpp  FPS.h  FieldTracker.cpp  FieldTracker.h  GreenScreen.cpp  GreenScreen.h  NextTracker.cpp  PlayerROIs.cpp  PuyoField.cpp  PuyoField.h  README.md  ROI.cpp  ROIController.cpp  ROIController.h  ScoreXTracker.cpp  StateController.cpp  StateController.h  puyo-chain-detector-cpp.sln
cpp/Chainsim/: BoolField.cpp  BoolField.h  Chainsim.cpp  Chainsim.vcxproj  Chainsim.vcxproj.filters  Constants.h  PuyoField.cpp  PuyoField.h
cpp/DesktopCapture/: DesktopCapture.cpp  DesktopCapture.vcxproj  DesktopCapture.vcxproj.filters
cpp/Detector/: Constants.h  CountField.cpp  CountField.h  Detector.cpp  Detector.vcxproj  Detector.vcxproj.filters  DeviceEnum.cpp  DeviceEnum.h  FieldTracker.cpp  GreenScreen.cpp  GreenScreen.h  NextTracker.cpp  NextTracker.h  PlayerROIs.h  ROIController.cpp  ScoreXTracker.cpp  ScoreXTracker.h  StateController.cpp  StateController.h  puyo-mlp-gpu.onnx
cpp/ObsFilter/: ObsFilter.vcxproj  ObsFilter.vcxproj.filters  filter.cpp  module.c
cpp/ObsFilter/libobs/: .gitignore
cpp/ObsFilter/libobs/x64/: obs.lib
cpp/ObsFilter/libobs/x86/: obs.lib
notebooks/: Analyze Score.ipynb  Field Detection Research 3.ipynb  Field Detection Research.ipynb  Field Grid.ipynb  Next Window Inner ROIs.ipynb
old-classifiers/: logistic-regression.joblib
python/: chainsim.py  greenscreen.py  permutechain.py  playerstate.py  requirements.txt  scraper.py  settings.json
python/capture-setup/: settings.py
research/: .gitignore  CVD Simulation.ipynb  Dataset Generation.ipynb  Model Testing.ipynb  Model Training.ipynb  README.md  Regions PPT1 PPC.ipynb  Regions PPT2.ipynb  cvd.json  puyo-classifier-feb8-2021.pt  puyo-mlp-gpu.onnx  regions-480-256.json  requirements.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  dashboard.html  detectionsettings.json  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  overlay.html  settings.json  threading.hpp
src/browsersource/: CMakeLists.txt  icon.psd  main.cpp  overlay.html  server.cpp  server.hpp
src/chainsim/: BoolField.cpp  CMakeLists.txt  Constants.hpp  FieldTemplate.cpp  Fields.hpp  IntField.cpp  PuyoField.cpp  main.cpp
src/detector/: CMakeLists.txt  Constants.hpp  Detector.cpp  Detector.hpp  NextTracker.cpp  NextTracker.hpp  PlayerTracker.cpp  PlayerTracker.hpp  ScoreTracker.cpp  ScoreTracker.hpp  Settings.hpp  main.cpp
src/websocket/: CMakeLists.txt  server.cpp  server.hpp
